@@ -1,3 +1,8 @@
+2007-12-13  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Ide.addin.xml: Add unique ids for the CodeDom templates and
+	  fix an XML typo.
+
 2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs,
